[package]
name = "casbinrs-mongo-adapter-examples"
version = "0.1.0"
authors = ["Simono il magnifico <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casbin = { version = "2.0.3", default-features = false, features = ["runtime-async-std", "logging", "explain"] }
async-std = { version = "1.8.0", features = ["attributes"] }
casbinrs-mongo-adapter = { path = "..", features = ["runtime-async-std"] }
